# operators

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: operators-config.cmake.in
examples/: CMakeLists.txt
